# Nutrihelp

./: .gitignore  CLAUDE.md  README.md
.claude/skills/: check-isolation.md  docker-status.md  lgpd-check.md  logs.md  manage.md  migrate.md  rag-smoke-test.md  shell.md  test.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-infrastructure-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-PATTERNS.md  01-RESEARCH.md  01-VALIDATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md
dotenv_files/: .env-example
nutrihelp_app/: pyproject.toml
nutrihelp_app/control/: celery.py  settings.py  tests.py  urls.py  wsgi.py
scripts/: smoke_test.sh
