[project]
name = "nutrihelp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Framework
    "django>=5.2,<6.0",
    "djangorestframework>=3.17,<4.0",
    "djangorestframework-simplejwt>=5.5,<6.0",

    # Database
    "psycopg2-binary>=2.9,<3.0",
    "pgvector>=0.4,<0.5",

    # RAG / LangChain (1.x — imports mudaram em relação ao 0.x)
    "langchain>=1.3,<2.0",
    "langchain-text-splitters>=1.1,<2.0",
    "langchain-openai>=1.2,<2.0",
    "langchain-anthropic>=1.4,<2.0",
    "langchain-community>=0.4,<0.5",

    # LLM SDKs diretos
    "anthropic>=0.103,<1.0",
    "openai>=2.37,<3.0",

    # Tarefas assíncronas
    "celery>=5.6,<6.0",
    "redis>=7.4,<8.0",

    # Vectorstore local dev
    "chromadb>=0.5,<1.0",

    # Processamento de documentos
    "pdfplumber>=0.11,<0.12",
    "pytesseract>=0.3,<0.4",
    "pillow>=12,<13",

    # Configuração
    "python-decouple>=3.8",

    # Servidor e static files
    "whitenoise>=6.12,<7.0",
    "gunicorn>=26,<27",

    # API docs (Phase 7)
    "drf-spectacular>=0.29,<0.30",
]
